# SerikaEHR

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed/: serika.db
data/raw/data_raw/: Allen322_Leighann368_Stoltenberg489_073290f9-73e6-8842-bddc-b568bfcb84b0.json  Alton320_Gutkowski940_a969c177-a995-7b89-7b6d-885214dfa253.json  Alvaro283_O'Reilly797_18c2c430-28e9-14ce-58d0-58bd1fbd31d2.json  Amy965_Franecki195_ec3b0fe4-cd6f-6fb4-e4ce-af33fae8c588.json  Andra606_Annis955_Cruickshank494_fcc2ce58-4808-f223-9902-107143303d1a.json  Annalee788_Daniel959_cd382ff2-7a77-9fdd-ba08-c32e94d57d04.json  Ardelia466_Ernser583_d58e87ef-9a0f-8d15-1b50-dfd3370142fb.json  Asa127_Harvey63_7f54f6fa-e4bd-302a-c9db-51e0a616992e.json  Ayanna800_Mertz280_235c29d8-9803-62c6-4279-0afd166b26ee.json  Bernetta267_Candyce305_Mosciski958_d559117c-166b-cfaf-e285-c58ef2f8501f.json  Brett333_Jakubowski832_fcff65fc-1e70-d1bf-bd75-f8ed1a767b14.json  Burt293_Huel628_4c4a9fd0-82c3-12ab-ce94-e07eee3e0141.json  Carline928_Gibson10_40021a9e-eeb3-4fd0-1d5a-2cd56a0bff73.json  Carmen818_Harris789_4e871c34-aab2-4336-d32e-62ab3827ca42.json  Cary869_Koss676_05c47e08-6cd7-9912-472b-03972f8aaaa5.json  Christina143_Emmerich580_2c10c1fc-0fa3-92be-3301-e556e634df2b.json  Cleo27_Grady603_8978f553-d1ac-2adb-0804-209abe89b36d.json  Cori307_Purdy2_7715ded5-4d8f-8bbf-ecb8-d8d65e3a7f15.json  Dalton260_Mohr916_240ed44d-7e39-0e09-9815-b194d3f4d585.json  Damien170_Wehner319_95699512-b738-15e7-a87a-fe33023b47b5.json  (+76 more)
src/serika/: extract.py  load.py  main.py  transform.py
tests/: test_transform.py
